[package]
name = "cm-telemetry"
version = "2.3.0"
authors = ["Oscar Moreno <oscarmg99@gmail.com>"]
repository = "https://github.com/ozkar99/cm-telemetry"
readme = "README.md"
description = "Implementation of the telemetry UDP protocol for codemasters (and friends) games"
license = "MIT"
edition = "2018"

[dependencies]
num = "0.4"
num_enum = "0.5"
enum_default = "0.2"
binread = "2.2"
byteorder = "1"
bitflags = "1.3.2"
